remove deprecated Number api usage from tests